updating colors an staking out colors im nit using anymore, fixes spacing issue on homepage

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -16,7 +16,10 @@
 .App {
   text-align: center;
   color: var(--auqa);
-  background-color:var(--trueTeal) 
+  background-color:var(--trueTeal);
+  min-height: 100vh; /* ensures that .App at least takes up the full height of the viewport */
+  display: flex; /* enable flexbox for .App */
+  flex-direction: column; /* stacks children of .App vertically */
 }
   
 .App-logo {
@@ -31,18 +34,18 @@
 }
 
 .App-header {
-  background-color: (white);
-  min-height: 100vh;
+  background-color: white;
+  flex-grow: 1; /* allow .App-header to take up any remaining space within .App */
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
   font-size: calc(10px + 2vmin);
-  color: (var(--trueTeal));
+  color: var(--trueTeal);
 }
 
 .App-link {
-  color: (chartreuse);
+  color: var(--chartreuse);
 }
 
 @keyframes App-logo-spin {
