--- a/client/src/components/Footer.css
+++ b/client/src/components/Footer.css
@@ -1,23 +1,17 @@
 .footer {
-    background-color: var(--outerSpace);
-    position: relative;
-    width: 80%;
-    height: 100%;
-    margin: 10%;
-    text-align: center;
-    color: var(--palePink);
-    border-radius: .5rem;
-    clear: both;
-    /* Add this property to clear the float */
-    border: 3px solid var(--offMint);
-    border-radius: 30px;
-    /* Add border property */
-    font-size: 25px;
-    inset: 0;
-    margin-top: 10px;
-    margin-bottom: 0px;
-    font-family: 'Alegreya Sans SC', sans-serif;
-  
-  }
+  background-color: var(--chartreuse);
+  width: 90%;  /* set width to 100% */
+  text-align: center;
+  color: var(--gulfCoast);
+  border-radius: .5rem;
+  clear: both;
+  border: 3px solid var(--offMint);
+  border-radius: 30px;
+  font-size: 25px;
+  margin-top: 10px;
+  margin-bottom: 0px;
+  font-family: 'Alegreya Sans SC', sans-serif;
+}
+
 
   
